<resources>
    <string name="app_name">StepTestApp</string>
    <string name="activity_main_textview_status_not_pressed">Not yet pressed!</string>
    <string name="activity_main_button_change_textview_text">Press me!</string>
    <string name="activity_main_button_goto_students_activity_text">Перейти к студентам</string>
    <string name="activity_students_textview_students_text">Студенты</string>
    <string name="activity_students_button_students_sort_byname">Отсортировать по имени</string>
    <string name="activity_students_button_students_sort_random">Отсортировать рандомно</string>
    <string name="activity_main_button_open_camera">Камера</string>
    <string name="activity_main_button_start_call">Звонок</string>
    <string name="activity_data1_button_goto_text">Перейти к Activity 2</string>
    <string name="activity_data2_textview_datatext">Переданный параметр:</string>
    <string name="activity_data2_textview_data_noparameter">Нет параметра</string>
    <string name="activity_main_button_goto_activity1">Перейти к Activity 1</string>
    <string name="activity_photo_button_make_photo">Сделать фото</string>
    <string name="activity_main_button_goto_activity_photo">Перейти к Photo Activity</string>
    <string name="activity_main_button_goto_activity_test">Перейти к Test Activity</string>
    <string name="activity_test_textview_question">Вопрос</string>
    <string name="activity_test_buttons_answer">Ответ</string>
    <string name="activity_main_button_goto_activity_login">Перейти к Login Activity</string>
    <string name="activity_login_edittext_login_hint">Логин</string>
    <string name="activity_login_edittext_password_hint">Пароль</string>
    <string name="activity_login_button_login">Войти</string>
    <string name="activity_login_button_hide_views">Скрыть все элементы</string>
    <string name="activity_main_button_goto_activity_shopping_list">Перейти к Shopping List Activity</string>
    <string name="activity_main_button_goto_activity_api_version">Перейти к API Version Activity</string>
    <string name="activity_whatsapp_button_send_message">Hello Friend</string>
    <string name="activity_main_button_goto_activity_whatsapp">Перейти к Whatsapp Activity</string>
    <string name="activity_new_login_edittext_login_hint">Login</string>
    <string name="activity_new_login_edittext_password_hint">Password</string>
    <string name="activity_new_login_button_enter">Enter</string>
    <string name="activity_main_button_goto_activity_new_login">Перейти к New Login Activity</string>
    <string name="viewholder_student_name_header">Имя студента: </string>
    <string name="viewholder_student_description_header">Описание студента: </string>
    <string name="viewholder_student_full_info_name_header">Имя студента: </string>
    <string name="viewholder_student_full_info_description_header">Описание студента: </string>
    <string name="viewholder_student_full_info_group_header">Группа студента: </string>
    <string name="viewholder_student_full_info_mark_header">Средняя оценка студента: </string>
    <string name="fragment_students_button_filtration_by_name">Фильтрация по имени</string>
    <string name="fragment_students_button_filtration_by_mark">Фильтрация по оценке</string>
    <string name="fragment_students_button_random_filtration">Фильтрация в случайном порядке</string>
    <string name="fragment_students_button_clear_query">Очистить</string>
    <string name="fragment_students_edittext_search_query">Поиск студентов</string>
    <string name="activity_main_button_call_crash">Вызвать краш приложения</string>
    <string name="activity_main_button_goto_activity_speech_recognizer">Перейти к Speech Recognizer Activity</string>
    <string name="activity_speech_recognizer_button_start_recognize">Начать распознавание речи</string>
    <string name="activity_user_registration_edittext_first_name_hint">Имя</string>
    <string name="activity_user_registration_edittext_surname_hint">Фамилия</string>
    <string name="activity_user_registration_button_fill_info_text">Заполнить данные</string>
    <string name="activity_main_button_goto_activity_user_registration">Перейти к User Registration Activity</string>
    <string name="activity_registered_user_info_edittext_first_name_hint">Имя</string>
    <string name="activity_registered_user_info_edittext_surname_hint">Фамилия</string>
    <string name="fragment_students_button_top_three_by_mark">3 лучших студента по оценке</string>
    <string name="activity_main_button_goto_notes_activity_text">Перейти к заметкам</string>
    <string name="fragment_create_note_edittext_title">Заголовок</string>
    <string name="fragment_create_note_edittext_due_date">Дата</string>
    <string name="fragment_create_note_edittext_text">Текст</string>
    <string name="fragment_create_note_button_add">Добавить</string>
    <string name="activity_user_registration_edittext_dob_hint">Дата рождения</string>
    <string name="activity_registered_user_info_edittext_dob_hint">Дата рождения</string>
    <string name="activity_user_registration_edittext_group_hint">Группа</string>
    <string name="activity_user_registration_edittext_mark_hint">Оценка</string>
    <string name="viewholder_students_group_title_header">Наименование класса</string>
    <string name="viewholder_students_group_students_count_header">Количество студентов</string>
    <string name="activity_main_button_goto_movies_activity_text">Перейти к фильмам</string>
    <string name="activity_registration_simulator_edittext_name_hint">Имя</string>
    <string name="activity_registration_simulator_edittext_email_hint">Email</string>
    <string name="activity_registration_simulator_edittext_password_hint">Пароль</string>
    <string name="activity_registration_simulator_edittext_repeat_password_hint">Повтор пароля</string>
    <string name="activity_registration_simulator_button_registration">Регистрация</string>
</resources>