<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textview_activity_main_status"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/activity_main_textview_status_not_pressed"
        android:textColor="@color/green"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/button_activity_main_action"
        android:text="@string/activity_main_button_change_textview_text"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_activity_main_goto_students_activity"
        android:text="@string/activity_main_button_goto_students_activity_text"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_activity_main_open_camera"
        android:text="@string/activity_main_button_open_camera"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_activity_main_start_call"
        android:text="@string/activity_main_button_start_call"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>