<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_fragment_students_filtration_by_name"
        android:text="@string/fragment_students_button_filtration_by_name" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_students_filtration_by_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_fragment_students_filtration_by_mark"
        android:text="@string/fragment_students_button_filtration_by_mark" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_students_filtration_by_mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_fragment_students_random_filtration"
        android:text="@string/fragment_students_button_random_filtration" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_students_random_filtration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_fragment_students_top_three_by_mark"
        android:text="@string/fragment_students_button_top_three_by_mark" />

    <EditText
        android:id="@+id/edittext_fragment_students_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_students_top_three_by_mark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/fragment_students_edittext_search_query"/>

    <Button
        android:id="@+id/button_fragment_students_clear_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button_fragment_students_top_three_by_mark"
        app:layout_constraintEnd_toEndOf="@+id/edittext_fragment_students_search_query"
        android:text="@string/fragment_students_button_clear_query" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_fragment_students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_students_search_query"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>