<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.RegistrationSimulatorActivity">

    <EditText
        android:id="@+id/edittext_activity_registration_simulator_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/activity_registration_simulator_edittext_name_hint"/>

    <EditText
        android:id="@+id/edittext_activity_registration_simulator_email"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_registration_simulator_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/activity_registration_simulator_edittext_email_hint"/>

    <EditText
        android:id="@+id/edittext_activity_registration_simulator_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_registration_simulator_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:inputType="textPassword"
        android:focusable="false"
        android:hint="@string/activity_registration_simulator_edittext_password_hint"/>

    <EditText
        android:id="@+id/edittext_activity_registration_simulator_repeat_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_registration_simulator_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:inputType="textPassword"
        android:focusable="false"
        android:hint="@string/activity_registration_simulator_edittext_repeat_password_hint"/>

    <TextView
        android:id="@+id/textview_activity_registration_simulator_status"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_registration_simulator_repeat_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button_activity_registration_simulator_registration"
        app:layout_constraintTop_toBottomOf="@+id/textview_activity_registration_simulator_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_registration_simulator_button_registration"/>

</androidx.constraintlayout.widget.ConstraintLayout>