<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.LoginActivity">

    <EditText
        android:id="@+id/edittext_activity_new_login_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/activity_new_login_edittext_login_hint"/>

    <EditText
        android:id="@+id/edittext_activity_new_login_password"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_new_login_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/activity_new_login_edittext_password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_activity_new_login_enter"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_new_login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_new_login_button_enter"/>
</androidx.constraintlayout.widget.ConstraintLayout>