<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.UserRegistrationActivity">

    <ImageView
        android:id="@+id/imageview_activity_user_registration_user_selfie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/edittext_activity_user_registration_user_first_name"
        app:layout_constraintTop_toBottomOf="@+id/imageview_activity_user_registration_user_selfie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/activity_user_registration_edittext_first_name_hint"/>

    <EditText
        android:id="@+id/edittext_activity_user_registration_user_surname"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_user_registration_user_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/activity_user_registration_edittext_surname_hint"/>

    <EditText
        android:id="@+id/edittext_activity_user_registration_user_dob"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_user_registration_user_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="1"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/activity_user_registration_edittext_dob_hint"/>

    <Button
        android:id="@+id/button_activity_user_registration_fill_info"
        app:layout_constraintTop_toBottomOf="@+id/edittext_activity_user_registration_user_dob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_user_registration_button_fill_info_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>